Selecting with shift+drag results in unexpected drag-n-drop https://bugs.webkit.org/show_bug.cgi?id=155314

Reviewed by Darin Adler.

Source/WebCore:

Test: editing/selection/shift-drag-selection-no-drag-n-drop.html

Whenever user tries to extend an existing text selection by dragging the mouse
(left button hold) with shift key pressed, WebKit enters drag-n-drop mode.
This behavior does not match common editing behavior out there, including other
browsers' (Firefox, Opera/Presto and IE).

Patch changes WebKit so that whenever one extends a selection with mouse
and shift key pressed off of a #text node, it does not enter drag-n-drop mode.

Additionally, patch also adds some further tests to ensure that when
selection is extended off of either a link or an image, drag-n-drop does
get triggered, no matter if shift key is pressed.

* page/EventHandler.cpp:
(WebCore::EventHandler::handleMousePressEvent):

LayoutTests:

Tests that ensure that WebKit:

1) does not enter drag-n-drop mode and extending selection by dragging with mouse with shift key is pressed,
   off of a #text node.
2) does enter drag-n-drop mode and extending selection by dragging with mouse with shift key is pressed,
   off of a link.
3) does enter drag-n-drop mode and extending selection by dragging with mouse with shift key is pressed,
   off of an image.

Note that (1) is a behavior changed by this patch, whereas (2) and (3) represent existing
behavior that is kept.
Tests are also skip for iOS similarly to other drag-n-drop related tests.

* fast/events/shift-drag-selection-no-drag-n-drop-expected.txt: Added.
* fast/events/shift-drag-selection-no-drag-n-drop.html: Added.
* fast/events/shift-drag-selection-on-link-triggers-drag-n-drop-expected.txt: Added.
* fast/events/shift-drag-selection-on-link-triggers-drag-n-drop.html: Added.
* fast/events/shift-drag-selection-on-image-triggers-drag-n-drop-expected.txt: Added.
* fast/events/shift-drag-selection-on-image-triggers-drag-n-drop.html: Added.

Canonical link: https://commits.webkit.org/173579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198163 268f45cc-cd09-0410-ab3c-d52691b4dbfc